corrects headers on mobile

--- a/styles.css
+++ b/styles.css
@@ -46,6 +46,7 @@ img {
     display: block;
     margin-left: auto;
     margin-right: auto;
+    font-size: smaller;
 }
 
 .links {
